# crypto-portfolio-tracker-backend

./: .gitignore  README.md  TODO.md  cabal.project  crypto-portfolio-tracker-backend.cabal  flake.nix  hie.yaml
lib/API/: API.hs  Ping.hs
lib/API/Cryptocurrency/: Types.hs
lib/API/Currency/: Currency.hs  Types.hs
lib/API/Data/Currency/: Currency.hs  Types.hs
lib/API/Servant/: API.hs
lib/API/Servant/Currency/: Currency.hs  Mock.hs  Types.hs
lib/API/Servant/Tools/: Tools.hs  Types.hs
lib/API/Service/: API.hs
lib/API/Service/Currency/: Currency.hs  Mock.hs  Types.hs
lib/API/Service/Tools/: Tools.hs  Types.hs
lib/API/Tools/: Tools.hs  Types.hs
lib/CoinMarketCap/: API.hs  Client.hs  Core.hs  Run.hs  Types.hs  Utils.hs
lib/Utils/: Types.hs  Utils.hs
src/: Main.hs
