cabal-version:   2.4
name:            crypto-portfolio-tracker-backend
version:         0
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
description:     Backend for a crypto portfolio tracker web app
author:          José María Landa Chávez
                 Alfonso Giuseppe Carte Granillo
maintainer:      José María Landa Chávez - josemaria.landa@gmail.com
                 Alfonso Giuseppe Carte Granillo - 
copyright:       2023-03-19 José María Landa Chávez
build-type:      Simple
extra-doc-files: 
  README.md
  CHANGELOG.md
license:         MIT
license-file:    LICENSE
  
common common-options
  build-depends:      base >=4.9 && <5
  default-language:   Haskell2010
  default-extensions: DataKinds,
                      TypeOperators,
                      TypeApplications,
                      DeriveGeneric,
                      DeriveAnyClass,
                      RankNTypes,
                      KindSignatures,
                      StandaloneKindSignatures,
                      PolyKinds,
                      TypeFamilies,
                      InstanceSigs
  ghc-options:

executable crypto-portfolio-tracker-backend-exe
  import:         common-options
  hs-source-dirs: src
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:  crypto-portfolio-tracker-backend,
                  wai,
                  warp

library
  import:          common-options
  hs-source-dirs:  lib
  exposed-modules: Lib, API.Service.API
  other-modules:   API.Service.Currency.Types,
                   API.Service.Currency.Currency,
                   API.Service.Currency.Mock,
                   API.Service.Tools.Types,
                   API.Service.Tools.Tools,
                   API.Data.Currency.Currency,
                   API.Data.Currency.Types,
                   Utils.Utils,
                   Utils.Types,
                   CoinMarketCap.API,
                   CoinMarketCap.Client,
                   CoinMarketCap.Types
  build-depends:   aeson,
                   text,
                   bytestring,
                   servant-server,
                   servant-client,
                   http-client,
                   first-class-families,
                   transformers,
                   split

test-suite crypto-portfolio-tracker-backend-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , crypto-portfolio-tracker-backend
    , hspec
    , HUnit
    , tasty
    , QuickCheck
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark crypto-portfolio-tracker-backend-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , crypto-portfolio-tracker-backend
    , criterion
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
